# art-emotion-transfer

./: .gitignore  pyproject.toml
src/config/: .env  __init__.py  data.py
src/data_utils/: dataset.py  downsample_script.py  preprocess.py  utils.py
src/model/: model.py  train.py  utils.py
